--- a/public/todo.html
+++ b/public/todo.html
@@ -8,85 +8,83 @@
 		<link href="css/todo.css" rel="stylesheet" type="text/css">
 		<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
         <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
 	
 	
 	<body>
-		<header>
-			<h1>D O L I S T</h1>
-		</header>
-		<main>
-		<aside id="menu">
-			<h3>Tasks</h3>
-			<section>
-				<select id="filter-select">
-					<option value="0">All</option>
-					<option value="1">Today</option>
-					<option value="2">Urgent</option>
-					<option value="3">Normal</option>
-				</select>
-			</section>
-			<h3>Filter</h3>
-			<section>
-				<ul>
-					<li>Personal</li>
-					<li>Projects</li>
-					<li>Study</li>
-				</ul>
-			</section>
-		</aside>
-		<section id="content">
+		<section class="side-menu">
+			<aside id="menu">
+				<header>
+					<h1>Welcome</h1>
+				</header>
+
+				<section id="filter">
+					<p>Filter</p>
+					<p><select id="filter-select">
+						<option value="0">All</option>
+						<option value="1">Today</option>
+						<option value="2">Urgent</option>
+						<option value="3">Normal</option>
+					</select></p>
+				</section>
+				<section id="edit">
+					<p>Edit a task</p>
+					<form id="edit-form">
+						<p><input id="edit-descr" type="text" placeholder="Describe your task..."></p>
+						<p><input id="edit-duedate" type="date" placeholder="Due date"></p>
+						<p><select id="edit-priority">
+						<option value="0">Normal</option>
+							<option value="3">Urgent</option>
+						</select></p>
+
+					</form>
+					<p><button id="edit-confirm" type="button">Confirm</button></p>
+				</section>
+			</aside>
+
+		</section>
+		<section class="content">
+			<h2>Tasks</h2>
+			<p>Create a task</p>
 			<form id="new" autocomplete="off">
-				<fieldset>
-					<legend id="form-legend">New Task</legend>
-					<br><input id="new-descr" type="text" placeholder="Describe your task...">
+					<input id="new-descr" type="text" placeholder="Describe your task...">
 					<input id="new-duedate" type="date" placeholder="Due date">
 					<select id="new-priority">
 						<option value="0">Normal</option>
 						<option value="3">Urgent</option>
-					</select></br>
+					</select>
 					<button id="new-confirm" type="button">Confirm</button>
-				</fieldset>
 			</form>
 
-			<section id="tools">
-				<p>Actions for selected:</p>
-				<button id="delete-task" type="button">Delete</button>
-				<button id="finish-task" type="button">Done</button>
-			</section>
-			<section id="sort">
-				<p>Sort tasks:</p>
-				<p><select id="sort-select">
-					<option value="0">By due date ascending</option>
-					<option value="1">By due date descending</option>
-					<option value="2">By priority ascending</option>
-					<option value="3">By priority descending</option>
-				</select></p>
-			</section>
 			<section id="tasks">
-				<button id="select-all" type="button">Select All</button>
-				<button id="select-none" type="button">Select None</button>
-				<form id="edit">
-					<fieldset>
-						<legend id="form-legend">Edit Task</legend>
-						<br><input id="edit-descr" type="text" placeholder="Describe your task..."></br>
-						<br><input id="edit-duedate" type="date" placeholder="Due date"></br>
-						<br><select id="edit-priority">
-							<option value="0">Normal</option>
-							<option value="3">Urgent</option>
-						</select></br>
-						<p><button id="edit-confirm" type="button">Confirm</button></p>
-					</fieldset>
-				</form>
-				<h2>Tasks</h2>
+				<section class="tools">
+						<input type="checkbox" class="select-all">
+						<select id="action-select">
+							<option value="0">Delete</option>
+							<option value="1">Done</option>
+						</select>
+						<button id="apply-confirm" type="button">Apply</button>
+						<select id="sort-select">
+							<option value="0">By due date ascending</option>
+							<option value="1">By due date descending</option>
+							<option value="2">By priority ascending</option>
+							<option value="3">By priority descending</option>
+						</select>
+				</section>
+
+				<!--p><button id="select-all" type="button">Select All</button>
+				<button id="select-none" type="button">Select None</button></p-->
+
 				<section id="task-list">
 				</section>
 			</section>
+			<footer>
+				<p>Copyright</p>
+			</footer>
 		</section>
-		</main>
-		<footer>
-		Copyright
-		</footer>
+
+
 	</body>
 	
 	
