--- a/public/todo.html
+++ b/public/todo.html
@@ -28,64 +28,56 @@
 						<option value="3">Normal</option>
 					</select></p>
 				</section>
-				<section id="edit">
-					<p>Edit a task</p>
-					<form id="edit-form">
-						<p><input id="edit-descr" type="text" placeholder="Describe your task..."></p>
-						<p><input id="edit-duedate" type="date" placeholder="Due date"></p>
-						<p><select id="edit-priority">
-						<option value="0">Normal</option>
-							<option value="3">Urgent</option>
-						</select></p>
 
-					</form>
-					<p><button id="edit-confirm" type="button">Confirm</button></p>
-				</section>
 			</aside>
 
 		</section>
 		<section class="content">
 			<h2>Tasks</h2>
-			<p>Create a task</p>
-			<form id="new" autocomplete="off">
+			<section id="new">
+				<p>Create a task</p>
+				<form id="new-form" autocomplete="off">
 					<input id="new-descr" type="text" placeholder="Describe your task...">
-					<input id="new-duedate" type="date" placeholder="Due date">
-					<select id="new-priority">
+					<input id="new-duedate" type="date" placeholder="Due date" title="Select a due date">
+					<select id="new-priority" title="Select a priority">
 						<option value="0">Normal</option>
 						<option value="3">Urgent</option>
 					</select>
-					<button id="new-confirm" type="button">Confirm</button>
-			</form>
-
+					<button id="new-confirm" type="submit" form="new-form">Add</button>
+				</form>
+			</section>
+			<div id="edit">
+				<p>Edit a task</p>
+				<form id="edit-form"  autocomplete="off">
+					<input id="edit-descr" type="text" placeholder="Describe your task...">
+					<input id="edit-duedate" type="date" placeholder="Due date">
+					<select id="edit-priority" title="Change the priority">
+						<option value="0">Normal</option>
+						<option value="3">Urgent</option>
+					</select>
+					<button id="edit-confirm" type="submit" form="edit-form">Edit</button>
+				</form>
+			</div>
 			<section id="tasks">
 				<section class="tools">
-						<input type="checkbox" class="select-all">
-						<select id="action-select">
+						<div><input type="checkbox" class="select-all" title="Select all tasks"></div>
+						<div><select id="action-select" title="Select an action">
 							<option value="0">Delete</option>
 							<option value="1">Done</option>
-						</select>
-						<button id="apply-confirm" type="button">Apply</button>
-						<select id="sort-select">
+						</select></div>
+						<div><button id="apply-confirm" type="button">Apply</button></div>
+                        <div><select id="sort-select" title="Sort tasks">
 							<option value="0">By due date ascending</option>
 							<option value="1">By due date descending</option>
 							<option value="2">By priority ascending</option>
 							<option value="3">By priority descending</option>
-						</select>
+						</select></div>
 				</section>
-
-				<!--p><button id="select-all" type="button">Select All</button>
-				<button id="select-none" type="button">Select None</button></p-->
-
-				<section id="task-list">
-				</section>
+                <section id="task-list"></section>
 			</section>
 			<footer>
 				<p>Copyright</p>
 			</footer>
 		</section>
-
-
 	</body>
-	
-	
 </html>
