finished as gud as

--- a/public/todo.html
+++ b/public/todo.html
@@ -14,11 +14,16 @@
 	
 	<body>
 		<section class="side-menu">
+            <nav class="top">
+                <div class="title">
+                    <a href="splash.html">D O L I S T</a>
+                </div>
+            </nav>
 			<aside id="menu">
 				<header>
 					<h1>Welcome</h1>
 				</header>
-
+                <a class="button" href="splash.html">Sign Out</a>
 				<section id="filter">
 					<p>Filter</p>
 					<p><select id="filter-select">
@@ -28,9 +33,7 @@
 						<option value="3">Normal</option>
 					</select></p>
 				</section>
-
 			</aside>
-
 		</section>
 		<section class="content">
 			<h2>Tasks</h2>
