--- a/public/splash.html
+++ b/public/splash.html
@@ -1,20 +1,39 @@
 <!doctype html>
-<<html>
-<head>
-	<title>Do IT now</title>
-</head>
-<body>
-	<header>
-		<h1>Do IT now</h1>	
-		<nav>
-		<a href="#">Join Now</a>
-		<a href="#">FAQ</a>
-		</nav>
-	</header>
+<html>
+    <head>
+        <link href="css/splash.css" rel="stylesheet" type="text/css">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    </head>
+    <body>
 
-	<main> 
-		<h2>Organise your thoughs with do it!</h2>
-	</main>
 
-</body>
+        <main>
+            <ul class="menu-bar">
+                <li class="menu-item title">
+                    <a href="splash.html">D O L I S T</a>
+                </li>
+                <li class="menu-item link">
+                    <a href="">FAQ</a>
+                </li>
+                <li class="menu-item link">
+                    <a href="">Support</a>
+                </li>
+                <li class="menu-item menu-actions">
+                    <a class="button" href="todo.html">Sign In</a>
+                </li>
+            </ul>
+             <div class="content1">
+                <div class="text-wrapper"><h1>Organise your tasks</h1>
+                    <p>Dolist is the easiest way to get stuff done. Whether you're planning a holiday, sharing a shopping list with a parter or managing multiple work projects, all your tasks are in order with dolist.</p>
+                    <a class="button" href="todo.html">Start Dolist</a>
+                </div>
+             </div>
+             <div class="content2">
+                 <div class="text-wrapper">
+                     <h1>Plan for anything</h1>
+                     <p>No matter what you're planning, how big or small the task may be, dolist makes it easy to get stuff done.</p>
+                 </div>
+            </div>
+        </main>
+    </body>
 </html>
