final html and css changes

--- a/public/todo.html
+++ b/public/todo.html
@@ -14,11 +14,11 @@
 	
 	<body>
 		<section class="side-menu">
-            <nav class="top">
-                <div class="title">
+            <ul class="menu-bar">
+                <li class="menu-item title">
                     <a href="splash.html">D O L I S T</a>
-                </div>
-            </nav>
+                </li>
+            </ul>
 			<aside id="menu">
 				<header>
 					<h1>Welcome</h1>
