dashboard page created

--- a/public/splash.html
+++ b/public/splash.html
@@ -11,6 +11,9 @@
                     <a href="splash.html">D O L I S T</a>
                 </li>
                 <li class="menu-item link">
+                    <a href="analytics.html">Dashboard</a>
+                </li>
+                <li class="menu-item link">
                     <a href="">FAQ</a>
                 </li>
                 <li class="menu-item link">
