--- a/public/analytics.html
+++ b/public/analytics.html
@@ -133,8 +133,21 @@
 <div id="9" class="info-wrapper">
     <div class="text-wrapper">
         <form id="9-form" autocomplete="off">
-            <p>For each tag, calculate the number of currently pending and completed to-dos.</p>
+            <p>For each week in the current year, calculate the number of completed to-dos.</p>
             <button id="9-confirm" type="submit" form="9-form">Refresh</button>
+        </form>
+        <div class="content">
+
+        </div>
+    </div>
+</div>
+<div id="10" class="info-wrapper">
+    <div class="text-wrapper">
+        <form id="10-form" autocomplete="off">
+            <p>For each tag, retrieve the 10 to-dos with quickest completion time (i.e. the time between the
+creation and the completion of the to-do).</p>
+			<input id="10-input" type="number" placeholder="Tag Id">
+            <button id="10-confirm" type="submit" form="10-form">Confirm</button>
         </form>
         <div class="content">
 
