--- a/public/splash.html
+++ b/public/splash.html
@@ -3,6 +3,7 @@
     <head>
         <link href="css/splash.css" rel="stylesheet" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     </head>
     <body>
         <header>
