routing, refactor, twitter auth wip

--- a/public/splash.html
+++ b/public/splash.html
@@ -9,10 +9,10 @@
         <header>
             <ul class="menu-bar">
                 <li class="menu-item title">
-                    <a href="splash.html">D O L I S T</a>
+                    <a href="splash">D O L I S T</a>
                 </li>
                 <li class="menu-item link">
-                    <a href="analytics.html">Dashboard</a>
+                    <a href="analytics">Dashboard</a>
                 </li>
                 <li class="menu-item link">
                     <a href="">FAQ</a>
