--- a/public/todo.html
+++ b/public/todo.html
@@ -3,12 +3,13 @@
 <html>
 	<head>
 		<title>Do IT now</title>
-		<script src="js/todo.js"></script>
-		<script src="js/note.js"></script>
-		<link href="css/todo.css" rel="stylesheet" type="text/css">
+
+		<link href="/css/todo.css" rel="stylesheet" type="text/css">
+		<script src="/js/todo.js"></script>
+		<script src="/js/note.js"></script>
 		<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css">
 	</head>
 	
 	
@@ -16,7 +17,7 @@
 		<section class="side-menu">
             <ul class="menu-bar">
                 <li class="menu-item title">
-                    <a href="splash.html">D O L I S T</a>
+                    <a href="/splash">D O L I S T</a>
                 </li>
             </ul>
 			<aside id="menu">
@@ -24,7 +25,7 @@
 				<header>
 					<h1>Welcome</h1>
 				</header>
-                <a class="button" href="splash.html">Sign Out</a>
+                <a class="button" href="/splash">Sign Out</a>
                 <a class="button" id="background-change">Change</a>
 				<section id="filter">
 					<p>Filter</p>
